--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ body{
 }
 a{
     color: #fff;
+    word-break: break-all;
 }
 header{
     font-size: 12px;
@@ -200,6 +201,15 @@ li>a{
     }
     section>h4, section>div{
         padding: 0 20px;
+    }
+    .w-35, .w-65{
+      width: 100%;
+    }
+    .hr{
+        display: none;
+    }
+    div{
+        box-sizing: border-box;
     }
 }
 
